--- a/htdocs/css/login.css
+++ b/htdocs/css/login.css
@@ -1,216 +1,195 @@
-@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Anton&family=Cookie&family=Poppins:wght@600&display=swap');
-
-:root {
-    --bg-text-shadow: 0 2px 4px rgb(13 0 77 / 8%), 0 3px 6px rgb(13 0 77 / 8%), 0 8px 16px rgb(13 0 77 / 8%);
-    --bg-box-shadow: 0px 0px 20px 6px rgb(0 0 0 / 34%);
-}
-
-* {
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
+*{
     margin: 0;
     padding: 0;
-    font-family: 'Poppins', sans-serif;
-    /* text-shadow: var(--bg-text-shadow); */
+    box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
 }
 
-body {
-    height: 100vh;
-    display: flex;
-    /* overflow: hidden; */
-}
-
-.carousel_section{
-    box-shadow: var(--bg-box-shadow);
-}
-/* side photo css */
-section {
-    height: 100%;
-    width: 50%;
-}
-
-.carousel-image {
-    height: 100vh;
-}
-
-.carousel-inner::after {
-    content: "";
-    position: absolute;
-    height: 100vh;
-    width: 100%;
-    background-color: rgba(0, 0, 255, 0.284);
-}
-
-/* login css */
-
-.logo {
-    height: 60px;
-    display: flex;
-    justify-content: center;
-    margin:20px 0;
-}
-
-.logo .bluebirdlogo {
-    height: 100%;
-}
-
-.logo p {
-    height: 100%;
+body{
+    background-color: #69beff7f;
+    background: linear-gradient(to right, #fbfbfb, #58aeff);
     display: flex;
     align-items: center;
-    font-size: 30px;
-    color: rgb(66, 68, 74);
-    text-shadow: var(--bg-text-shadow);
-}
-
-.auth_container {
-    height: 80%;
-    margin: 50px;
-}
-
-#Log_in {
-    height: 100%;
-    width: 100%;
-    display: flex;
+    justify-content: center;
     flex-direction: column;
-    align-items: center;
+    height: 100vh;
 }
 
-.role_btn {
-    display: flex;
-    gap: 30px;
-    margin: 20px 0;
-    flex-wrap: wrap;
-}
-
-.role_btn .btns {
-    height: 40px;
-    width: 200px;
-    border: none;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 20px;
-    background-color: rgba(93, 102, 116, 0.318);
-    font-size: 17px;
-    font-weight: 700;
-}
-
-.role_btn .btns:hover{
-    background-image: linear-gradient(90deg, rgba(76, 185, 236, 0.527), rgba(0, 30, 255, 0.456));
-    transition: ease-in-out;
-    color: white;
-}
-
-.btns.active{
-    background-image: linear-gradient(90deg, rgba(76, 185, 236, 0.527), rgba(0, 30, 255, 0.456));
-    color: white;
-}
-
-.authsection {
-    width: 70%;
-    margin: 10px;
-    display: none;
-    text-align: center;
-    animation: screen_animation .4s;
-}
-/* toggle display */
-.user_login.active{
-    display: block;
-}
-
-.employee_login.active{
-    display: block;
-}
-
-.form-floating {
-    margin: 15px 0;
-} 
-
-.auth_btn {
-    padding: 15px 30px;
-    border: unset;
-    border-radius: 15px;
-    background-color: rgba(118, 141, 176, 0.318);
-    z-index: 1;
+.container{
+    background-color: #fff;
+    border-radius: 30px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
     position: relative;
-    font-size: 17px;
-    transition: all 250ms;
     overflow: hidden;
+    width: 768px;
+    max-width: 100%;
+    min-height: 480px;
 }
 
-.auth_btn::before {
-    content: "";
+.container p{
+    font-size: 14px;
+    line-height: 20px;
+    letter-spacing: 0.3px;
+    margin: 20px 0;
+}
+
+.container span{
+    font-size: 12px;
+}
+
+.container a{
+    color: #333;
+    font-size: 13px;
+    text-decoration: none;
+    margin: 15px 0 10px;
+}
+
+.container button{
+    background-color: #2b149c;
+    color: #fff;
+    font-size: 12px;
+    padding: 10px 45px;
+    border: 1px solid transparent;
+    border-radius: 8px;
+    font-weight: 600;
+    letter-spacing: 0.5px;
+    text-transform: uppercase;
+    margin-top: 10px;
+    cursor: pointer;
+}
+
+.container button.hidden{
+    background-color: transparent;
+    border-color: #fff;
+}
+
+.container form{
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 40px;
+    height: 100%;
+}
+
+.container input{
+    background-color: #eee;
+    border: none;
+    margin: 8px 0;
+    padding: 10px 15px;
+    font-size: 13px;
+    border-radius: 8px;
+    width: 100%;
+    outline: none;
+}
+
+.form-container{
     position: absolute;
     top: 0;
+    height: 100%;
+    transition: all 0.6s ease-in-out;
+}
+
+.sign-in{
     left: 0;
+    width: 50%;
+    z-index: 2;
+}
+
+.container.active .sign-in{
+    transform: translateX(100%);
+}
+
+.sign-up{
+    left: 0;
+    width: 50%;
+    opacity: 0;
+    z-index: 1;
+}
+
+.container.active .sign-up{
+    transform: translateX(100%);
+    opacity: 1;
+    z-index: 5;
+    animation: move 0.6s;
+}
+
+@keyframes move{
+    0%, 49.99%{
+        opacity: 0;
+        z-index: 1;
+    }
+    50%, 100%{
+        opacity: 1;
+        z-index: 5;
+    }
+}
+
+
+.toggle-container{
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 50%;
     height: 100%;
-    width: 0;
-    z-index: -1;
-    border-radius: 10px;
-    background-image: linear-gradient(90deg, rgba(76, 185, 236, 0.527), rgba(0, 30, 255, 0.456));
-    transition: all 250ms
+    overflow: hidden;
+    transition: all 0.6s ease-in-out;
+    border-radius: 150px 0 0 100px;
+    z-index: 1000;
 }
 
-.auth_btn:hover {
-    color: #ffffff;
+.container.active .toggle-container{
+    transform: translateX(-100%);
+    border-radius: 0 150px 100px 0;
 }
 
-.auth_btn:hover::before {
-    width: 100%;
-}
-
-.footer_line{
-    margin: 20px 0;
-}
-
-.page_move_btn{
-    color: rgba(0, 0, 255, 0.599);
-    cursor: pointer;
-}
-.page_move_btn:hover{
-    color: blue;
-}
-
-/* signup */
-#sign_up{
+.toggle{
+    background-color: #8dd1ff;
     height: 100%;
-    width: 100%;
-    display: none;
-    flex-direction: column;
+    background: linear-gradient(to right, #5a70c0, #1e51be);
+    color: #fff;
+    position: relative;
+    left: -100%;
+    height: 100%;
+    width: 200%;
+    transform: translateX(0);
+    transition: all 0.6s ease-in-out;
+}
+
+.container.active .toggle{
+    transform: translateX(50%);
+}
+
+.toggle-panel{
+    position: absolute;
+    width: 50%;
+    height: 100%;
+    display: flex;
     align-items: center;
-}
-
-.user_signup{
-    width: 70%;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 30px;
     text-align: center;
-    animation: screen_animation .4s;
+    top: 0;
+    transform: translateX(0);
+    transition: all 0.6s ease-in-out;
 }
 
-/* animation frame */
-@keyframes screen_animation {
-    0%{
-        transform: translateX(50px);
-    }
+.toggle-left{
+    transform: translateX(-200%);
 }
 
+.container.active .toggle-left{
+    transform: translateX(0);
+}
 
+.toggle-right{
+    right: 0;
+    transform: translateX(0);
+}
 
-/* responsive stuff */
-
-@media(max-width: 30rem){
-    .carousel_section{
-        display: none;
-    }
-    #auth_section{
-        width: 100%;
-    }
-    .auth_container
-    {
-        width: 100%;
-        padding: 0;
-        margin: 0;
-    }
-    #Log_in .role_btn .btns{
-        width: 90px;
-    }
+.container.active .toggle-right{
+    transform: translateX(200%);
 }
